 - Significat changes in the overlay shortcuts and cmd line:
   - Split into 2 groups, main and steam
   - Higher granularity in what you want to display
   - Colors changed a little
   - See the readme for current shortcuts and cmd line
 - Configs for J50, 2F Dock Tank and 3F Jinty by MeshTools
 - Config for GWR Small Prairies by VictoryWorks
 - Configs for Cologne Koblenz locos
 - Damper axis removed, it made little sense
 - FireboxDoor, ExhaustSteam and LiveSteam axes (also for FEF-3)

0.7
 - Support for FEF-3 HUD version, sorry, forgot previously.
 - Support for Bulleid Q1, see the steamers section in the readme.
 - Support for 14xx/48xx/58xx, see the steamers section in the readme.
 - Support for BR442 Talent 2, BR420, Class 50.
 - Stoking, ExhaustWater, LiveWater added to axes controls
 - Further modifications in a way the overlay is configured
   (similar to the joystick part, autodetections first, then locos).
 - Range added to all GenerateEqualNotches calls, even the {0,1} cases.
 - Minor changes here and there.
 - README updated again. I remind you that I constantly update it when
   adding some new functionality or changing something substantially.

0.6d
 - FEF-3 support. Not all controls are in the HUD simply because there
   is too many of them, but all that are used during normal startup,
   firing and driving are.
 - Separate Blowers for J94
 - Experimental green speed indicator when speed is up to 5 units
   (mph/kph) below the speed limit.

0.6
 - WARNING: some of my internal configurations have changed a little.
   If you rely on them have a look in the locoss sections.
 - Made an optiom for the program to treat driving backwards as forwards
   (Shift-Alt-S). Very usefull for some locos/scenarios where you have to
   drive backwards for longer periods of time.
 - New axes for the joystick: Small Ejector, HandBrake, Blower, Damper.
   Very usefull for 3rd party realistic locos (e.g. VictoryWorks).